# metadata

./: .gitignore  CLAUDE.md  CLI_USAGE.md  EXP.md  EXP_PLUS.md  IMPLEMENTATION_CONSISTENCY.md  IMPLEMENTATION_SPEC.md  Initial_idea.md  README.md  TASKS.md  pyproject.toml
experiments/: README.md  benchmark_runner.py  dataset_generator.py  metrics.py  prepare_figure_data.py  render_plots.py
metamirror/: __main__.py  audit.py  cli.py  db.py  extractor.py  proposals.py  scanner.py  watcher.py
paper/: PLAN_6_ROUNDS_ITERATIVE.md  README.md  VLDB.tex.working  VLDB_VISION_PLAYBOOK.md  new_review_cycle.sh  sync_figure_to_overleaf.sh
paper/reviews/: ROUND_PROGRESS_2026-05-08.md  TEMPLATE.md  VLDB_3_REVIEWERS_DETAILED_2026-05-08.md  c2026-05-08-r1c1.md  c2026-05-08-r1c2.md  c2026-05-08-r2c1.md  c2026-05-08-r2c2.md  c2026-05-08-r3c1.md  c2026-05-08-r3c2.md  c2026-05-08-r4c1.md  c2026-05-08-r4c2.md  c2026-05-08-r5c1.md  c2026-05-08-r5c2.md  c2026-05-08-r6c1.md  c2026-05-08-v1.md  (+4 more)
tests/: test_db_pragmas.py  test_duplicates.py  test_events.py  test_experiments_cleanup_and_reproducibility.py  test_experiments_dataset_generator.py  test_experiments_frequent_updates.py  test_experiments_history_audit.py  test_experiments_large_files.py  test_experiments_metadata_consistency.py  test_experiments_metadata_utility.py  test_experiments_prepare_figure_data.py  test_experiments_safety.py  test_experiments_scalability.py  test_experiments_token_efficiency.py  test_list_proposals_filter.py  test_proposals.py  test_scan.py  test_scan_rehash.py  test_search_escape.py  test_status_summary.py
(+25 files in other folders)
