[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metamirror"
version = "0.1.0"
description = "Workspace-local metadata mirror CLI"
requires-python = ">=3.10"

[project.scripts]
metamirror = "metamirror.cli:main"

[tool.setuptools]
packages = ["metamirror"]
